# Blue3D

./: .gitignore  AndroidManifest.xml  build.gradle  local.properties  make_shader.bat  make_shader.sh  settings.gradle
Houyi/: .cproject  .project  AndroidManifest.xml  CMakeLists.txt  Houyi.h  build.gradle
Houyi/Houyi/: Houyi.h  Info.plist
Houyi/Houyi.xcodeproj/: project.pbxproj
Houyi/HouyiTests/: HouyiTests.m
Houyi/ai/: RubikResolver.cpp
Houyi/ai/include/: RubikResolver.h
Houyi/astronomy/: HouyiHeavenlyObject.cpp  HouyiPlanet.cpp  HouyiPlanetarySystem.cpp  HouyiSolarSystem.cpp
Houyi/astronomy/include/: HouyiHeavenlyObject.h  HouyiPlanet.h  HouyiPlanetarySystem.h  HouyiSolarSystem.h  HouyiStar.h
Houyi/framework/: CMakeLists.txt  HouyiAABB.cpp  HouyiAbsListView.cpp  HouyiAllocator.cpp  HouyiAnimation.cpp  HouyiAudioManager.cpp  HouyiAudioTrack.cpp  HouyiAxis.cpp  HouyiCamera.cpp  HouyiCameraAnimation.cpp  HouyiCameraNode.cpp  HouyiCanvas.cpp  HouyiCanvasFactory.cpp  HouyiCapability.cpp  HouyiCubeEnvMap.cpp  HouyiDataInputStream.cpp  HouyiFPCamera.cpp  HouyiFile.cpp  HouyiGameWorld.cpp  HouyiGestureDetector.cpp  HouyiGrid.cpp  HouyiImageFactory.cpp  HouyiJointNode.cpp  HouyiKeyFrame.cpp  HouyiLight.cpp  HouyiMap.cpp  HouyiMaterial.cpp  HouyiMaterialManager.cpp  HouyiMesh.cpp  HouyiMeshOptimizer.cpp  HouyiModelViewCamera.cpp  HouyiMotionEvent.cpp  HouyiNode.cpp  HouyiObject.cpp  HouyiOrthographicCamera.cpp  HouyiPopupWorld.cpp  HouyiRenderEntity.cpp  HouyiRenderer.cpp  HouyiRigidBody.cpp  HouyiRoot.cpp  (+20 more)
Houyi/framework/android/: HouyiAndroidAudioTrack.cpp  HouyiAndroidAudioTrack.h  HouyiAndroidCanvas.cpp  HouyiAndroidCanvas.h  HouyiAndroidImage.cpp  HouyiAndroidImage.h  android.h
Houyi/framework/include/: HouyiAABB.h  HouyiAllocator.h  HouyiAnimation.h  HouyiArray.h  HouyiAudioManager.h  HouyiAudioTrack.h  HouyiAxis.h  HouyiCamera.h  HouyiCameraAnimation.h  HouyiCameraNode.h  HouyiCanvas.h  HouyiCanvasFactory.h  HouyiCapability.h  HouyiColor.h  HouyiConst.h  HouyiCubeEnvMap.h  HouyiDataInputStream.h  HouyiDataOutputStream.h  HouyiDef.h  HouyiFPCamera.h  HouyiFile.h  HouyiForce.h  HouyiGameWorld.h  HouyiGestureDetector.h  HouyiGrid.h  HouyiImage.h  HouyiImageFactory.h  HouyiIndexBuffer.h  HouyiJointNode.h  HouyiKeyFrame.h  HouyiLight.h  HouyiLog.h  HouyiMap.h  HouyiMapLayer.h  HouyiMaterial.h  HouyiMaterialManager.h  HouyiMemoryPool.h  HouyiMesh.h  HouyiMeshOptimizer.h  HouyiModelViewCamera.h  (+36 more)
Houyi/framework/ios/: HouyiUtils.h  HouyiUtils.mm  HouyiiOSAudioTrack.h  HouyiiOSAudoTrack.cpp  HouyiiOSCanvas.cpp  HouyiiOSCanvas.h  HouyiiOSImage.cpp  HouyiiOSImage.h  ios.h
Houyi/geometry/: HouyiCircle.cpp  HouyiCircleOutline.cpp  HouyiCone.cpp  HouyiCuboid.cpp  HouyiCylinder.cpp  HouyiGeoPlane.cpp  HouyiGeoSphere.cpp  HouyiRing.cpp
Houyi/geometry/include/: HouyiCircle.h  HouyiCircleOutline.h  HouyiCone.h  HouyiCuboid.h  HouyiCylinder.h  HouyiGeoPlane.h  HouyiGeoSphere.h  HouyiGeometry.h  HouyiPrime.h  HouyiRing.h
Houyi/gi/: SmallPT.cpp
Houyi/gui/: HouyiButton.cpp  HouyiDragImageView.cpp  HouyiEditableImageView.cpp  HouyiImageView.cpp  HouyiListView.cpp  HouyiTextView.cpp  HouyiTileImageView.cpp  HouyiView.cpp  HouyiWaveformView.cpp
Houyi/gui/include/: HouyiAbsListView.h  HouyiAdapter.h  HouyiButton.h  HouyiDragImageView.h  HouyiEditableImageView.h  HouyiImageView.h  HouyiListView.h  HouyiTextView.h  HouyiTileImageView.h  HouyiUI.h  HouyiView.h  HouyiWaveformView.h
Houyi/iOS/: Houyi3D.h  Houyi3D.m  Info.plist
Houyi/jni/: Android.mk  Application.mk  hengine.cpp  hengine.h  houyi.mk  libjpg.mk  libpng.mk  prebuilt.mk
Houyi/libs/libiconv/: charset_config.h  genaliases2.c  genflags.c  localcharset.c
Houyi/libs/libxml/: iconv.h  libxml.h  threads.c
Houyi/libs/libxml/libxml/: xmlversion.h
Houyi/loader/: Collada.cpp  Houyi3dsLoader.cpp  HouyiAbsColladaLoader.cpp  HouyiColladaLoader.cpp  HouyiDefaultLoader.cpp  HouyiDefaultSaver.cpp  HouyiLoader.cpp  HouyiMapLoader.cpp  HouyiObjLoader.cpp  HouyiSaver.cpp  HouyiStlLoader.cpp
Houyi/loader/include/: Collada.h  Houyi3dsLoader.h  HouyiAbsColladaLoader.h  HouyiColladaLoader.h  HouyiDefaultLoader.h  HouyiDefaultSaver.h  HouyiLoader.h  HouyiMapLoader.h  HouyiObjLoader.h  HouyiSaver.h  HouyiStlLoader.h  HouyiVector.h
Houyi/math/: HouyiMath.cpp  HouyiMatrix3.cpp  HouyiMatrix4.cpp  HouyiPlane.cpp  HouyiQuaternion.cpp  HouyiSphere.cpp  HouyiVector2.cpp  HouyiVector3.cpp  HouyiVector4.cpp
Houyi/math/include/: HRect.h  HouyiAxisAlignedBox.h  HouyiMath.h  HouyiMatrix3.h  HouyiMatrix4.h  HouyiPlane.h  HouyiPlaneBoundedVolume.h  HouyiQuaternion.h  HouyiRay.h  HouyiSphere.h  HouyiVector2.h  HouyiVector3.h  HouyiVector4.h
Houyi/renderer/: CMakeLists.txt  HouyiPass.cpp
Houyi/renderer/GLES20/: HouyiGLDefaultPass.cpp  HouyiGLESCubeMapTexture.cpp  HouyiGLESRenderer.cpp  HouyiGLESTexture.cpp  HouyiGLEnvPass.cpp  HouyiGLFirePass.cpp  HouyiGLPass.cpp  HouyiGLShadowPass.cpp  HouyiGLUtils.cpp
Houyi/renderer/GLES20/include/: HIShaders.h  (+10 more)
Houyi/renderer/include/: HouyiPass.h
Houyi/res/values/: strings.xml
Houyi/shader/bump/: fragment.sdr
Houyi/shader/camera/: vertex.sdr
Houyi/shader/cubemap/: fragment.sdr  vertex.sdr
Houyi/shader/default/: vertex.sdr
Houyi/shader/gbook/: fragment.sdr  vertex.sdr
Houyi/shader/glowing_texture/: fragment.sdr
Houyi/shader/msaa/: vertex.sdr
Houyi/shader/ppl/: fragment.sdr
Houyi/shader/ripple/: vertex.sdr
Houyi/shader/shadow_cast/: fragment.sdr
Houyi/src/main/: AndroidManifest.xml
Houyi/tools/: upload.js  upload_sim.js
app/: .classpath  .cproject  .project  AndroidManifest.xml  CMakeLists.txt  build.gradle  proguard-rules.pro  project.properties  sign
app/assets/: Crate_dae.dae  female.houyi
app/csource/: BlueAdapter.cpp  BlueWorld.cpp  BlueWorld.h
app/jni/: Android.mk  Application.mk  JNI.cpp
app/res/layout/: dialog_shading.xml  dialog_show_hide.xml  grid_item.xml
app/res/menu/: action_menu.xml  action_single.xml  action_view.xml
app/res/values/: analytics.xml  strings.xml
app/res/values-sw600dp-mdpi/: dimensions.xml
app/src/main/: AndroidManifest.xml
(+248 files in other folders)
